src/styles/app.css
.inline-block {
    display:inline-block;
}

body{
    
}

.liskhunt-logo img{
    max-height: 1.5rem;
}

.underlined {
    text-decoration: underline;
}

.padded-content {
    padding-top: 4%!important;
    padding-bottom: 5%!important;
}

.card:after {
    z-index: -1;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    opacity: 0;
    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    transition: all .9s cubic-bezier(0.165, 0.84, 0.44, 1)!important;
}

.card:hover {
    transform: scale(1.005);
}

.card:hover:after {
    opacity: 1;
}

.hover-dropdown {
    height: initial!important;
    padding-top: 0px!important;
    padding-bottom: 0px!important;
    background-color: transparent!important;
}

.link {
    text-decoration: underline;
    font-weight: bold;
}

.pointer {
    cursor: pointer;
}

.background-transparent {
    background-color: transparent;
}

.is-active,.is-active:hover,.navbar-item:hover {
    background-color: transparent!important;
    color: white!important;
}

.max-size-limited {
    max-width: 950px;
}

.navbar{
    width: 90%;
    margin: auto;
}

.is-centered-image {
    margin-left: auto; margin-right: auto;
}

